--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,7 @@
-/* @import "tailwindcss"; */
 @import "tailwindcss";
 @custom-variant dark (&:is(.dark *));
 
 /* @import 'antd/dist/reset.css'; */
-
 /* @import "tw-animate-css"; */
 
 
@@ -12,7 +10,7 @@
 
 :root {
     /* #D81B60 */
-    --primary :#D81B60 ;
+    --primary :#2472fc;
     --background: #030708;
     --blue :#096dd9;
     /* inputs */
@@ -76,7 +74,7 @@
     @apply   bg-gradient-to-b from-white via-white;
 }
 @utility bg-gradient-primary {
-    @apply  !bg-gradient-to-r from-purple-600 to-pink-600;
+    @apply  !bg-gradient-to-r from-[#00BFFF] to-primary;
 }
 @utility bg-gradient-delete {
     @apply !bg-gradient-to-r from-black to-red-500;
@@ -92,17 +90,29 @@
     @apply text-gradient bg-gradient-primary scale-110;
 }
 
+@utility global-container {
+    @apply mx-auto  px-5 container lg:px-10;
+}
+@utility scrollbar-style{
+    scrollbar-color: var(--blue) black !important;
+    scrollbar-width:thin !important
+}
+
+
+
 @layer base {
     * {
         @apply border-border outline-ring/50 text-white;
+        scroll-behavior: smooth;
     }
-
     body {
         @apply bg-background;
+ 
     }
 
+
     main {
-        @apply mx-auto container flex flex-col !px-5  lg:!px-10 py-10 gap-20   relative min-h-[calc(100vh-100px)];
+        @apply  flex flex-col  py-10 gap-20   relative min-h-[calc(100vh-100px)];
     }
     h1{
         @apply text-4xl md:text-6xl text-center font-bold self-center;
@@ -125,11 +135,12 @@
     .custom-input { 
         @apply !px-0 !bg-transparent !text-[#DCFFF8] !border-transparent  focus:!border-transparent focus:!shadow-none  focus:!outline-none  hover:!border-transparent !placeholder-[#DCFFF8]  
      }
+    
     header {
         @apply glass sticky top-0 z-50;
 
         nav {
-            @apply flex flex-row justify-between mx-auto container  !px-5  lg:!px-10 py-3;
+            @apply flex flex-row justify-between global-container py-3;
               /* أي span جوه link عند hover أو active */
             .group:hover span,
             .group:active span {
@@ -158,7 +169,7 @@
     .feedback{
        @apply text-center w-full flex-grow   relative  flex-center flex-col gap-7 relative;
        h3 {
-        @apply  text-white text-3xl md:text-5xl lg:text-7xl font-bold ;
+        @apply  text-white text-3xl md:text-5xl lg:text-7xl font-bold;
        }
        p{
         @apply  text-[#B8B8B8] text-lg md:text-3xl italic;
@@ -218,7 +229,7 @@
     }
     /* ant design table */
     .ant-table.custom-table {
-        @apply mt-[25px]  !rounded-xl !relative flex-grow;
+        @apply mt-[25px]  !rounded-xl !relative flex-grow; 
         .ant-table-thead > tr > th {
             @apply  !bg-table-head !border-none !text-white 
         }
@@ -268,22 +279,25 @@
         }
         /* scrollbar */
         .ant-table-container {
-            scrollbar-color: #d818c5 black !important;
-            scrollbar-width: thin !important;
-          }
+           @apply scrollbar-style
+        }
         
     }
-    /* !ml-[-7rem] !w-[calc(100%+35rem)] */ 
    .custom-collapse .ant-collapse-header {
-       @apply !py-5 !px-0  shadow-sm !sticky top-14.5 !z-40 glass; 
+       @apply !py-5 !px-0 !mx-auto !sticky top-14.5 !z-40 glass !w-full  !items-center; 
+       .ant-collapse-title {
+          @apply !global-container;
+       }
     }
     .custom-collapse .ant-collapse-body{
-        @apply   !p-0; 
+        @apply  !border !border-none !global-container;
+    }
+    .custom-collapse .ant-collapse-body > *{
+        @apply  !w-full lg:!w-[70%];
     }
 
     .custom-collapse .ant-collapse-item {
-        @apply  !relative !border-none;
-
+        @apply  !relative  !px-0 !border !border-none;
     }
     
     .btn-hover-primary{
